[project]
name = "FormDyn API"
version = "0.1.0"
description = "Gestão de formulários dinâmicos para armazenamento de dados"
authors = [
    { name = "Max Fernandes de Souza", email = "xaamax@gmail.com" }
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check'
lint_fix = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev app/app.py'